# rules_bats

./: CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: release.yml  release_prep.sh
bats/: BUILD.bazel  bats.sh.tpl  core.BUILD.bazel  core.BUILD.bazel.tpl  defs.bzl  extensions.bzl  helper.BUILD.bazel  repositories.bzl  toolchain.bzl
bats/private/: BUILD.bazel  core.BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
bats/tests/: versions_test.bzl
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  assert.bats  fail.bats  run.bats
