"Bazel dependencies"

module(
    name = "rules_bats",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

bats = use_extension("//bats:extensions.bzl", "bats")
bats.toolchain(
    name = "bats",
    version = "1.10.0",
)
use_repo(bats, "bats_toolchain")

register_toolchains("@bats_toolchain//:all")
