bazel_dep(name = "rules_bats", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)

local_path_override(
    module_name = "rules_bats",
    path = "../..",
)

bats = use_extension("@rules_bats//bats:extensions.bzl", "bats")
bats.toolchain(
    name = "bats_1_10",
    version = "1.10.0",
)
use_repo(bats, "bats_1_10_toolchain")
