# Override http_archive for local testing
local_repository(
    name = "rules_bats",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_bats setup #
######################
# Fetches the rules_bats dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_bats//bats:repositories.bzl", "rules_bats_dependencies", "bats_register_toolchains")

rules_bats_dependencies()

bats_register_toolchains(
  name = "bats",
  bats_version = "1.10.0",
)
